# teamwork-launcher

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: macos.yml  publish.yml  rust-clippy.yml  rust.yml  test.yml  windows.yml
application/: Cargo.toml  tf2-launcher
application/src/: application.rs  launcher.rs  main.rs  models.rs  server_info.rs  servers.rs  servers_provider.rs  settings.rs  setup.rs  skial_source.rs  states.rs  teamwork_source.rs  text_filter.rs
application/src/icons/: mod.rs
application/src/sources/: mod.rs  skial_source.rs  teamwork_source.rs
application/src/sources/tests/: skial.html
application/src/ui/: header.rs  mod.rs  servers.rs  settings.rs
application/src/views/: buttons.rs  mod.rs  servers.rs  settings.rs
ci/: installer.iss  optim.txt
documentation/: notes.md
documentation/examples/: sources_gamemodes.json  sources_providers.json
mods-manager/: Cargo.toml
mods-manager/resources/tests/: 3HUD.7z
mods-manager/src/: deployment.rs  lib.rs  package.rs  registry.rs  source.rs
old/: Cargo.toml
old/palettes/: default.orig
old/src/: icons.rs  server_info.rs  settings.rs  styles.rs
old/src/ui/: favorite_button.rs  mod.rs
src/: colors.rs  iced_color_helpers.rs  icons.rs  main.rs  server_info.rs  styles.rs  ui.rs
src/ui/: favorite_button.rs  mod.rs
teamwork/: Cargo.toml
teamwork-launcher/: Cargo.toml  build.rs
teamwork-launcher-old/: Cargo.toml  build.rs
teamwork-launcher-old/src/: application.rs  launcher.rs  main.rs  models.rs  servers_provider.rs  settings.rs
teamwork-launcher-old/src/icons/: mod.rs
teamwork-launcher-old/src/sources/: mod.rs
teamwork-launcher-old/src/ui/: advanced_filter.rs  announces.rs  servers.rs  settings.rs
teamwork-launcher/innosetup/: installer.iss
teamwork-launcher/src/: advanced_filter.rs  announces.rs  application.rs  common_settings.rs  directories.rs  geolocation.rs  launcher.rs  main.rs  models.rs  ping_service.rs  process_detection.rs  promised_value.rs  server_filters.rs  servers_provider.rs  servers_sources.rs  settings.rs  source_filter.rs  text_filter.rs
teamwork-launcher/src/application/: blacklist.rs  bookmarks.rs  common_settings.rs  country.rs  country_filter.rs  fetch_servers.rs  filter_dictionary.rs  filter_servers.rs  game_mode.rs  game_mode_filter.rs  geolocation.rs  ip_port.rs  launcher.rs  map.rs  message.rs  mod.rs  mods_management.rs  notifications.rs  palettes.rs  paths.rs  ping.rs  process_detection.rs  progress.rs  promised_value.rs  properties_filter.rs  screens.rs  screenshots.rs  server.rs  servers_counts.rs  servers_source.rs  thumbnail.rs  user_settings.rs  views.rs
teamwork-launcher/src/application/filter/: country_filter.rs  filter_dictionary.rs  filter_servers.rs  game_mode_filter.rs  map_filter.rs  mod.rs  ping_filter.rs  player_filter.rs  provider_filter.rs  sort_servers.rs  text_filter.rs
teamwork-launcher/src/fonts/: mod.rs
teamwork-launcher/src/icons/: mod.rs
teamwork-launcher/src/sources/: mod.rs  servers_sources.rs  teamwork_source.rs
teamwork-launcher/src/ui/: add_mod_view.rs  advanced_filter.rs  announces.rs  blacklist.rs  buttons.rs  color.rs  filter.rs  form.rs  header.rs  main.rs  mod.rs  mods_view.rs  server.rs  server_details.rs  servers.rs  settings.rs  styles.rs  tooltip.rs  widgets.rs
teamwork-rs/: Cargo.toml
teamwork/src/: lib.rs  parsing.rs  url_with_key.rs
