[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.5", features = ["tokio", "svg", "image"] }
nom = "7"
reqwest = { version = "0.11" }
select = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.37"
async-trait = "0.1.58"
xmltree = "0.10.3"
log = "0.4"
fern = "0.6"
anyhow = "1.0.66"
