[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.5", features = ["tokio", "svg", "image"] }
iced_lazy = "0.2.0"
teamwork = { path = "../teamwork" }
nom = "7"
reqwest = { version = "0.11" }
select = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
xmltree = "0.10.3"
log = "0.4"
fern = "0.6"
anyhow = "1.0"
platform-dirs = "0.3"
clap = { version = "4.0", features = ["derive"] }
rfd = "0.10.0"
async-rwlock = "1.3.0"
async-std = "1.12.0"

