[package]
name = "mods-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
enum-as-inner = "0.5.1"
fs_extra = "1.3.0"
reqwest = "0.11.15"
serde = { version = "1.0.159", features = ["derive"] }
tempdir = "0.3.7"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["fs", "macros"] }
walkdir = "2.3.3"

zip = "0.6.4"
sevenz-rust = { version = "0.2.9", default-features = false, features = ["zstd", "bzip2"] }
# If https://github.com/muja/unrar.rs/pull/29 get merged switch back
# to the original repository.
unrar = { git = "https://github.com/IohannRabeson/unrar.rs" }

[dev-dependencies]
test-case = "3.1.0"
