[package]
name = "mods-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
enum-as-inner = "0.6.0"
fs_extra = "1.3.0"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
tempdir = "0.3.7"
thiserror = "1"
tokio = { version = "1.28.2", features = ["fs", "macros"] }
walkdir = "2.3.3"

zip = "0.6.6"
# We have to enable the feature "compress" even if we don't need it
# to be able to build sevenz-rust. See https://github.com/dyz1990/sevenz-rust/issues/22.
sevenz-rust = { version = "0.4.2", default-features = false, features = ["zstd", "bzip2", "compress"] }
# If https://github.com/muja/unrar.rs/pull/29 get merged switch back
# to the original repository.
unrar = { git = "https://github.com/IohannRabeson/unrar.rs" }
backoff = { version = "0.4.0", features = ["tokio"] }

[dev-dependencies]
test-case = "3.1.0"

[features]
flaky-tests = []
