[package]
name = "tf2-server-selector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-as-inner = "0.5.1"
iced = { version = "0.4", features = ["pure", "tokio", "image", "svg"] }
iced_lazy = { version = "0.1.1", features = ["pure"] }
iced_native = { version = "0.5.1" }
iced_pure = "0.2.2"
nom = "7.1.1"
reqwest = { version = "0.11.11", features = ["blocking"] }
select = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.32"
xmltree = "0.10.3"
