[package]
name = "teamwork-launcher"
description = "Launcher for Team Fortress 2 that uses Teamwork.tf as data source."
version = "0.3.0"
edition = "2021"
default-run = "teamwork-launcher"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teamwork = { path = "../teamwork" }
iced = { version = "0.8.0", features = ["tokio", "svg", "image"] }
# For access to image::Data
iced_native = "0.9.1"
iced_lazy = "0.5.0"
iced_aw = { version = "0.4.1", default-features = false, features = ["floating_element", "number_input"] }
iced_spinner = { git = "https://github.com/IohannRabeson/iced_spinner" }
thiserror = "1"
static_assertions = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

async-stream = "0.3.3"
iso_country = "0.1"
reqwest = "0.11.14"
surge-ping = "0.7.3"
include_dir = "0.7.3"
lazy_static = "1.4.0"
itertools = "0.10.5"
nom = "7.1.3"
unidecode = "0.3.0"
sysinfo = "0.28.0"
platform-dirs = "0.3.0"
bytesize = "1.1.0"
tokio = { version = "1.25.0", features = ["macros", "time"] }
log = "0.4"
fern = { version = "0.6", features = ["chrono"] }
chrono = "0.4"
open = "3.2.0"

[dev-dependencies]
test-case = "3.0.0"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7", default-features = false, features = ["build", "rustc", "git"] }

[package.metadata.bundle]
identifier = "com.io.teamwork-launcher"
copyright = "Copyright (c) Iohann Rabeson 2023. All rights reserved."
osx_minimum_system_version = "10.8"

