[package]
name = "teamwork-launcher"
description = "Launcher for Team Fortress 2 that uses Teamwork.tf as data source."
version = "0.6.1"
edition = "2021"
default-run = "teamwork-launcher"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teamwork = { path = "../teamwork" }
mods-manager = { path = "../mods-manager" }
iced = { version = "0.9.0", features = ["tokio", "svg", "image"] }
# For access to image::Data
iced_native = "0.10.1"
iced_lazy = "0.6.1"
# Change to the next version after 0.4.1
iced_aw = { version = "0.5.0", default-features = false, features = ["floating_element", "number_input", "spinner"] }
thiserror = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"

async-stream = "0.3"
iso_country = "0.1"
reqwest = "0.11"
surge-ping = "0.8.0"
include_dir = "0.7.3"
lazy_static = "1.4.0"
itertools = "0.10"
nom = "7"
unidecode = "0.3.0"
sysinfo = "0.28"
platform-dirs = "0.3.0"
tokio = { version = "1.25.0", features = ["macros", "time"] }
log = "0.4"
fern = { version = "0.6", features = ["chrono"] }
chrono = "0.4"
open = "4.0"
iced_views = "0.1.0"
steamlocate = "1.2.1"
tempdir = "0.3.7"
bincode = "1.3.3"
rfd = "0.11.3"

[dev-dependencies]
test-case = "3.1.0"

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "git2"] }

[package.metadata.bundle]
identifier = "com.io.teamwork-launcher"
copyright = "Copyright (c) Iohann Rabeson 2023. All rights reserved."
osx_minimum_system_version = "10.8"

[features]
flaky-tests = ["mods-manager/flaky-tests"]
