[package]
name = "teamwork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
serde_json = "1.0.89"
thiserror = "1.0.37"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }