[package]
name = "teamwork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"
async-mutex = "1.4.0"
enum-as-inner = "0.5"